[package]
name = "c2rc"
version = "0.1.0"
edition = "2021"
description = "Add two uints from C to Rust"
authors = ["xTekC"]

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }

[build-dependencies]
cc = "1.0.77"
